# dns-bench

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  RELEASE-CHECKLIST.md  RELEASE.md  SECURITY.md  build-win-exe.sh  ipv4-custom-servers-example.txt  ipv6-custom-servers-example.txt
.devcontainer/: devcontainer.json  install.sh
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  labeler.yml
.github/workflows/: check.yml  docker.yml  labeler.yml  prs-cache-clean.yml
docker/: Dockerfile  OVERVIEW.md  build.sh  push.sh  test-ci.sh  test.sh
examples/: ipv4-custom-servers-example.txt  ipv6-custom-servers-example.txt  output-example.csv  output-example.json  output-example.xml
src/: app.rs  args.rs  bench.rs  cli.rs  config.rs  custom.rs  gateway.rs  main.rs  resolver.rs  result.rs  servers.rs  system.rs  test_utils.rs
src/commands/: bench.rs  config.rs  mod.rs
src/output/: csv.rs  json.rs  mod.rs  table.rs  xml.rs
tests/assets/: scutil_dns.txt
tests/assets/gateway/: linux_ip_route_default.txt  linux_proc_net_route.txt  mac_netstat_rn.txt  mac_route_get_default.txt  win_route_print.txt  win_route_print_ru.txt
tests/assets/system/: ipconfig_all_ru.txt  resolv.conf  win_ipconfig_all.txt
