[package]
name = "dns-bench"
version = "0.10.0"
edition = "2021"
authors = ["Alexandr Garbuzov <qwerty541zxc@gmail.com>"]
description = "Find the fastest DNS in your location to improve internet browsing experience."
keywords = ["dns", "network", "cli", "benchmark", "rust"]
categories = ["network-programming", "command-line-utilities"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qwerty541/dns-bench"
homepage = "https://github.com/qwerty541/dns-bench"
readme = "README.md"
rust-version = "1.82.0"
include = [
    "src/**/*",
    "Cargo.*",
    "README.md",
    "LICENSE-*",
    "CHANGELOG.md",
    "README.md"
]

[dependencies]
clap = { version = "4.5.39", features = ["std", "derive"] }
csv = "1.3.1"
directories = "6.0.0"
hickory-resolver = "0.24.4"
indicatif = "0.17.11"
lazy_static = "1.5.0"
quick-xml = "0.37.5"
serde = { version = "1.0.219", features = ["derive"], default-features = false }
serde_json = "1.0.140"
tabled = "0.20.0"
toml = "0.8.23"
