[package]
name = "dns-bench"
version = "0.14.0"
edition = "2021"
authors = ["Alexandr Garbuzov <qwerty541zxc@gmail.com>"]
description = "Find the fastest DNS in your location to improve internet browsing experience."
keywords = ["dns", "network", "cli", "benchmark", "rust"]
categories = ["network-programming", "command-line-utilities"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qwerty541/dns-bench"
homepage = "https://github.com/qwerty541/dns-bench"
readme = "README.md"
rust-version = "1.82.0"
include = ["src/**/*", "Cargo.*", "README.md", "LICENSE-*", "CHANGELOG.md"]

[dependencies]
clap = { version = "4.5.53", features = ["std", "derive", "cargo"] }
csv = "1.4.0"
derive_more = { version = "2.1.0", features = [
    "error",
    "from",
    "is_variant",
], default-features = false }
directories = "6.0.0"
hickory-resolver = "0.24.4"
indicatif = "0.18.3"
lazy_static = "1.5.0"
quick-xml = "0.38.4"
serde = { version = "1.0.228", features = ["derive"], default-features = false }
serde_json = "1.0.145"
tabled = "0.20.0"
toml = "0.9.8"
